# mmtour_trat_dw

./: README.md  pyproject.toml
dados/01/: janeiro.xlsx
dados/teste/: 01 - JANEIRO  -  AGENDAMENTOS .xls  01_JANEIRO.xlsx
src/: func.py
