[tool.poetry]
name = "mmtour-trat-dw"
version = "0.1.0"
description = ""
authors = ["Mairondc21 <duartemairon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
psycopg2-binary = "^2.9.10"
xlrd = "^2.0.1"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
